style.css
html {
	background-color: black;
	color: white;
	text-align: center;
	overflow: hidden;
}

#display-element {
	/* Position */
	position: absolute;
	width: 100%;
	top: 50%;
	transform: translateY(-50%);

	text-align: center;
	font-size: 50vmin;
	color: white;
}

.unselectable {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

